digarams for step iii 2018 q1

--- a/tex/2018/3/1.tex
+++ b/tex/2018/3/1.tex
@@ -30,6 +30,10 @@
 
           This means the curve \(y = f(\beta)\) is as below.
 
+          \begin{center}
+              \input{\currfiledir 1-diag1}
+          \end{center}
+
           Similarly, by differentiation with respect to \(\beta\), we have
           \[
               g'(\beta) = 1 - \frac{3}{\beta^2} + \frac{2}{\beta^3}.
@@ -58,6 +62,10 @@
           When \(\beta < 0\), we have as \(\beta \to 0^{-}\), \(f(\beta) \to -\infty\). As \(\beta \to -\infty\), \(f(\beta) \to \beta\) from below.
 
           This means the curve \(y = g(\beta)\) is as below.
+
+          \begin{center}
+              \input{\currfiledir 1-diag2}
+          \end{center}
 
     \item By Vieta's Theorem, we have \(u + v = -\alpha\), and \(uv = \beta\). Hence,
           \[
