add diagram for STEP III 2015 Q3 (Conchoid of Nicomedes)

--- a/tex/2015/3/3.tex
+++ b/tex/2015/3/3.tex
@@ -15,6 +15,10 @@
 
           Let \(O\) be the origin, \(P_{\theta}(a, a \tan \theta)\) and \(P_0(a, 0)\). All points on the half-line \(OP_{\theta}\) will have argument \(\theta\).
 
+          \begin{center}
+              \input{\currfiledir 3-diag1}
+          \end{center}
+
           Let \(Q_{\theta}\) be the points on such line, satisfying the given equation \(\abs{r - a \sec \theta} = b\).
 
           For every \(\theta \in \left(-\frac{\pi}{2}, \frac{\pi}{2}\right)\), we have
@@ -28,7 +32,17 @@
 
           This is precisely the definition of a conchoid of Nicomedes, and this finishes our proof.
 
-    \item When \(\sec \theta < 0\), \(\sec\theta \leq -1\). We have \(r = a \sec \theta \pm b\).
+          \begin{center}
+              \input{\currfiledir 3-diag2}
+          \end{center}
+
+    \item The sketch is as below.
+
+          \begin{center}
+              \input{\currfiledir 3-diag3}
+          \end{center}
+
+          When \(\sec \theta < 0\), \(\sec\theta \leq -1\). We have \(r = a \sec \theta \pm b\).
 
           Since \(r \geq 0\), we must have \(r = a \sec \theta + b \geq 0\) (since if \(r = a \sec \theta - b\), then \(r < 0\)), and hence
           \[
