start 2012 paper and finish q4.

--- a/main.tex
+++ b/main.tex
@@ -22,7 +22,7 @@
 \pagestyle{fancy}
 % \include{\TexPath/2010}
 % \include{\TexPath/2011}
-% \include{\TexPath/2012}
+\include{\TexPath/2012}
 \include{\TexPath/2013}
 \include{\TexPath/2014}
 \include{\TexPath/2015}
