--- a/tex/2012/3/4.tex
+++ b/tex/2012/3/4.tex
@@ -1,2 +1,50 @@
 \Question{\currfilebase}
-\WorkInProgress
+
+\begin{enumerate}
+    \item Using the Maclaurin Expansion of \(e^x\) and setting \(x = 1\), we have
+          \[
+              e = e^1 = \sum_{n = 0}^{+\infty} \frac{1^n}{n!} = \sum_{n = 0}^{+\infty} \frac{1}{n!}.
+          \]
+
+          Hence,
+          \begin{align*}
+              \sum_{n = 1}^{+\infty} \frac{n + 1}{n!} & = \sum_{n = 1}^{+\infty} \frac{n}{n!} + \sum_{n = 1}^{+\infty} \frac{1}{n!}                      \\
+                                                      & = \sum_{n = 1}^{+\infty} \frac{1}{(n - 1)!} + \sum_{n = 0}^{+\infty} \frac{1}{n!} - \frac{1}{0!} \\
+                                                      & = \sum_{n = 0}^{+\infty} \frac{1}{n!} + \sum_{n = 0}^{+\infty} \frac{1}{n!} - 1                  \\
+                                                      & = e + e - 1                                                                                      \\
+                                                      & = 2e-1.
+          \end{align*}
+
+          We have as well
+          \begin{align*}
+              \sum_{n = 1}^{+\infty} \frac{(n + 1)^2}{n!} & = \sum_{n = 1}^{+\infty} \frac{n (n - 1) + 3n + 1}{n!}                                                                              \\
+                                                          & = \sum_{n = 1}^{+\infty} \frac{n(n - 1)}{n!} + 3 \sum_{n = 1}^{+\infty} \frac{n}{n!} + \sum_{n = 1}^{+\infty} \frac{1}{n!}          \\
+                                                          & = \sum_{n = 2}^{+\infty} \frac{1}{(n - 2)!} + 3 \sum_{n = 1}^{+\infty} \frac{1}{(n - 1)!} + \sum_{n = 0}^{+\infty} \frac{1}{n!} - 1 \\
+                                                          & = 5\sum_{n = 0}^{+\infty} \frac{1}{n!} - 1                                                                                          \\
+                                                          & = 5e - 1,
+          \end{align*}
+          as desired.
+
+          We also have
+          \begin{align*}
+              \sum_{n = 1}^{+\infty} \frac{(2n - 1)^3}{n!} & = \sum_{n = 1}^{+\infty} \frac{8n^3 - 12n^2 + 6n - 1}{n!}                                                                                                                           \\
+                                                           & = \sum_{n = 1}^{+\infty} \frac{8n(n - 1)(n - 2) + 12 n (n - 1) + 2n - 1}{n!}                                                                                                        \\
+                                                           & = 8 \sum_{n = 3}^{+\infty} \frac{1}{(n - 3)!} + 12 \sum_{n = 2}^{+\infty} \frac{1}{(n - 2)!} + 2 \sum_{n = 1}^{+\infty} \frac{1}{(n - 1)!} - \sum_{n = 0}^{+\infty}\frac{1}{n!} + 1 \\
+                                                           & = (8 + 12 + 2 - 1) \sum_{n = 0}^{+\infty} \frac{1}{n!} + 1                                                                                                                          \\
+                                                           & = 21e + 1.
+          \end{align*}
+
+    \item Using the Maclaurin Expansion of \(\ln(1 - x)\) and letting \(x = \frac{1}{2}\), we have
+          \[
+              \ln 2 = - \ln \left(1 - \frac{1}{2}\right) = \sum_{n = 1}^{+\infty} \frac{\left(\frac{1}{2}\right)^n}{n} =  \sum_{n = 1}^{+\infty} \frac{2^{-n}}{n}.
+          \]
+
+          Hence,
+          \begin{align*}
+              \sum_{n = 0}^{+\infty} \frac{(n^2 + 1) 2^{-n}}{(n + 1)(n + 2)} & = \sum_{n = 0}^{+\infty} \frac{[(n + 1)(n + 2) - 5(n + 1) + 2(n + 2)]2^{-n}}{(n + 1)(n + 2)}                                   \\
+                                                                             & = \sum_{n = 0}^{+\infty} 2^{-n} - 5\sum_{n = 0}^{+\infty} \frac{2^{-n}}{n + 2} + 2 \sum_{n = 0}^{+\infty} \frac{2^{-n}}{n + 1} \\
+                                                                             & = 2 - 5 \cdot 4 \sum_{n = 2}^{+\infty} \frac{2^{-n}}{n} + 2 \cdot 2 \sum_{n = 1}^{+\infty} \frac{2^{-n}}{n}                    \\
+                                                                             & = 2 - 20 (\ln 2 - \frac{1}{2}) +4 (\ln 2)                                                                                      \\
+                                                                             & = -16 \ln 2 + 12.
+          \end{align*}
+\end{enumerate}
